--- a/css/style-global.css
+++ b/css/style-global.css
@@ -6,3 +6,10 @@
 body {
   background-color: #0c0b0b;
 }
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
