--- a/css/style-usuario.css
+++ b/css/style-usuario.css
@@ -2,5 +2,6 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin-top: 60px;
+  margin-top: 160px;
+  width: 80%;
 }
